allow renaming of script files